<?xml version="1.0"?>
<package format="3">
  <name>imu_serial_reader</name>
  <version>0.0.0</version>
  <description>Read IMU data from Arduino over serial and publish as sensor_msgs/Imu</description>
  <maintainer email="elif@example.com">elif</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
